--- a/TaskTwo/TaskTwo.csproj
+++ b/TaskTwo/TaskTwo.csproj
@@ -40,6 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bank.cs" />
+    <Compile Include="GameFeatures.cs" />
     <Compile Include="Skill.cs" />
     <Compile Include="ActionSkill.cs" />
     <Compile Include="GameCharacter.cs" />
