--- a/TaskTwo/TaskTwo.csproj
+++ b/TaskTwo/TaskTwo.csproj
@@ -42,6 +42,8 @@
   <ItemGroup>
     <Compile Include="Bank.cs" />
     <Compile Include="GameFeatures.cs" />
+    <Compile Include="GameFeaturesForArcher.cs" />
+    <Compile Include="GameFeaturesForMage.cs" />
     <Compile Include="Skill.cs" />
     <Compile Include="ActionSkill.cs" />
     <Compile Include="GameCharacter.cs" />
